# apps/backend/src/schema/projects.schema.ts
@@ -4,8 +4,11 @@ import {
   varchar,
   boolean,
   bigint,
+  uuid,
+  type AnyPgColumn,
 } from 'drizzle-orm/pg-core';
 import { users } from './users.schema';
+import { images } from './images.schema';
 
 export const projects = pgTable('projects', {
   id: bigserial('id', { mode: 'number' }).primaryKey(),
@@ -13,8 +16,12 @@ export const projects = pgTable('projects', {
   description: varchar('description', { length: 255 }).notNull(),
   public: boolean('public').default(true).notNull(),
   ownerId: bigint('owner_id', { mode: 'number' })
-    .references(() => users.id, {
+    .references((): AnyPgColumn => users.id, {
       onDelete: 'cascade',
     })
     .notNull(),
+  imgId: uuid('img_id').references((): AnyPgColumn => images.id, {
+    onDelete: 'cascade',
+  }),
+  imgUrl: varchar('img_url', { length: 255 }),
 });
